style.css
body {
    margin: 0;
    font-family: 'Roboto', sans-serif;
    background-color: #302323;    
}

#heading > * {
    color: #FFF8EA;
    text-align: center;
}

#ruleText {
    font-size: 18px;
    margin-bottom: 4em;
}

#buttonContainer {
    display: flex;
    justify-content: center;
}

#choiceButtons {
    display: flex;
    flex-direction: column;
    margin-bottom: 2em;
}

.button {
    margin: 0.5em;
    background-color: #b9633b;
    color: #FFF8EA;
    font-size: 24px;
    padding: 0.5em;
    display: block;    
}

#results {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    margin-bottom: 1em;
}

.resultsHeading {
    font-weight: bold;
    color: #FFF8EA;
}

.resultsText {
    color: #FFF8EA;
    font-size: 18px;
    text-align: center;
}

#roundResults {
    display: flex;
    justify-content: center;
    margin-bottom:1em;
}

#finalResultText {
    text-align: center;
    margin-bottom: 1em;
}

#playAgain {
    display: flex;
    justify-content: center;
}

